--- a/MonopHelper/MonopHelper.csproj
+++ b/MonopHelper/MonopHelper.csproj
@@ -20,4 +20,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\TurnBased\" />
+    </ItemGroup>
+
 </Project>
