--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -1,5 +1,6 @@
 {
   "init_userId": "default",
+  "version": "v1.2",
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
