added cards and new db

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -2,7 +2,8 @@
   "init_userId": "default",
   "version": "v1.2",
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "Game":"DataSource=Data/gameDb.db"
   },
   "Logging": {
     "LogLevel": {
