require login to app

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -2,8 +2,8 @@
   "init_userId": "default",
   "version": "v1.2",
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "Game":"DataSource=Data/gameDb.db"
+    "DefaultConnection": "DataSource=../db/app.db;Cache=Shared",
+    "Game":"DataSource=/../db/gameDb.db"
   },
   "Logging": {
     "LogLevel": {
