removed email confirmation and started admin pages

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "init_userId": "default",
-  "version": "v1.2",
+  "no_tenant": "1",
+  "version": "v1.1.2",
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=../db/app.db;Cache=Shared",
     "Game":"DataSource=/../db/gameDb.db"
