--- a/MonopHelper/MonopHelper.csproj
+++ b/MonopHelper/MonopHelper.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Helpers\GameDefaults\CSVs\" />
       <Folder Include="Pages\TurnBased\" />
     </ItemGroup>
 
