fixes and can copy and move cards

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -3,7 +3,7 @@
   "version": "v1.1.2",
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=../db/app.db;Cache=Shared",
-    "Game":"DataSource=/../db/gameDb.db"
+    "Game":"DataSource=../db/gameDb.db"
   },
   "Logging": {
     "LogLevel": {
