can remove roles and reset password

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -1,5 +1,6 @@
 {
   "no_tenant": "1",
+  "reset_password":"",
   "version": "v1.1.3",
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=../db/app.db;Cache=Shared",
