--- a/MonopHelper/MonopHelper.csproj
+++ b/MonopHelper/MonopHelper.csproj
@@ -28,4 +28,8 @@
       <Folder Include="Pages\TurnBased\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MonopolyCL\MonopolyCL.csproj" />
+    </ItemGroup>
+
 </Project>
