--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -3,8 +3,8 @@
   "reset_password":"",
   "version": "v1.2.3",
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=../db/app.db;Cache=Shared",
-    "Game":"DataSource=../db/gameDb.db"
+    "DefaultConnection": "DataSource=../../db/app.db;Cache=Shared",
+    "Game":"DataSource=../../db/gameDb.db"
   },
   "Logging": {
     "LogLevel": {
