--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -2,6 +2,7 @@
   "no_tenant": "1",
   "reset_password":"",
   "version": "v1.3.6",
+  "FILE-BASE-PATH": "../../../MonopFiles",
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=../../db/app.db;Cache=Shared",
     "Game":"DataSource=../../db/gameDb.db"
