old app for accessing sqlite database

--- a/MonopHelper/appsettings.json
+++ b/MonopHelper/appsettings.json
@@ -3,8 +3,8 @@
   "reset_password":"",
   "version": "v1.3.6",
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=../../db/app.db;Cache=Shared",
-    "Game":"DataSource=../../db/gameDb.db"
+    "DefaultConnection": "DataSource=../../Databases/OLD Monop Data/app.db;Cache=Shared",
+    "Game":"DataSource=../../Databases/OLD Monop Data/gameDb.db"
   },
   "Logging": {
     "LogLevel": {
